# nextcall

./: .gitignore  CLAUDE.md  Cargo.toml  Info.plist  Makefile  README.md  build.rs  build.sh  dev.sh  run.sh  rust-objc.md
.cargo/: config.toml
assets/: AppIcon.icns  make-icons.sh
src/: camera.rs  config.rs  dialog.rs  ical.rs  icon.rs  logic.rs  main.rs  notifications.rs  say.rs  tray.rs
src/native/: camera.m  notifications.m  tray.m
