[package]
name = "nextcall"
version = "0.1.0"
edition = "2024"

[dependencies]
ical = "0.11.0"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
serde_json = "1.0"
chrono = "0.4"
chrono-tz = "0.10"
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString", "NSArray", "NSObject", "NSError", "NSDictionary"] }
tray-icon = "0.14.3"
winit = "0.29.15"
image = "0.25.0"
imageproc = "0.25.0"
ab_glyph = "0.2"
block2 = "0.5"
open = "5.0"
anyhow = "1.0.100"
rodio = "0.21.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "time", "local-time"] }
tracing-appender = "0.2"
bytes = "1.10.1"
