[package]
name = "nextcall"
version = "0.1.0"
edition = "2024"

[dependencies]
ical = "0.11.0"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
serde_json = "1.0"
chrono = "0.4"
chrono-tz = "0.10"
anyhow = "1.0.100"
rodio = "0.21.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "time", "local-time"] }
tracing-appender = "0.2"
bytes = "1.10.1"

[build-dependencies]
# Compiles the Objective-C helpers in src/native/ (see build.rs).
cc = "1"
