[package]
name = "nextcall"
version = "0.1.0"
edition = "2024"

[dependencies]
ical = "0.11.0"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
serde_json = "1.0"
chrono = "0.4"
chrono-tz = "0.10"
anyhow = "1.0.100"
rodio = "0.21.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "time", "local-time"] }
tracing-appender = "0.2"
bytes = "1.10.1"
rrule = "0.14.0"

[build-dependencies]
# Compiles the Objective-C helpers in src/native/ (see build.rs).
cc = "1"

[workspace.lints.rustdoc]
invalid_codeblock_attributes = "allow"

[workspace.lints.clippy]
dbg_macro = "warn"
use_self = "warn"
allow_attributes = "warn"
undocumented_unsafe_blocks = "warn"
redundant_clone = "warn"
absolute_paths = "warn"

# in general we lint against the pedantic group, but we will whitelist
# certain lints which we don't want to enforce
pedantic = { level = "warn", priority = -1 }
cast_precision_loss = "allow"
doc_markdown = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
similar_names = "allow"
too_many_lines = "allow"
